--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   webview_flutter: ^4.13.0
   uuid: ^4.5.2
   supabase_flutter: ^2.12.0
+  google_mlkit_text_recognition: ^0.14.0
+  image_picker: ^1.1.2
+  sensors_plus: ^6.1.1
 
 dev_dependencies:
   flutter_test:
