--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^17.0.1
   google_fonts: ^6.3.3
   fl_chart: ^1.1.1
+  shared_preferences: ^2.5.2
   intl: ^0.20.2
   drift: ^2.30.0
   sqlite3_flutter_libs: ^0.5.41
