--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_mlkit_text_recognition: ^0.14.0
   image_picker: ^1.1.2
   sensors_plus: ^6.1.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
