--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   image_picker: ^1.1.2
   sensors_plus: ^6.1.1
   shimmer: ^3.0.0
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
