--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   sensors_plus: ^6.1.1
   shimmer: ^3.0.0
   share_plus: ^12.0.1
+  flutter_local_notifications: ^19.5.0
+  timezone: ^0.10.1
+  flutter_local_notifications_platform_interface: ^9.1.0
 
 dev_dependencies:
   flutter_test:
