--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   timezone: ^0.10.1
   flutter_local_notifications_platform_interface: ^9.1.0
+  file_picker: ^10.3.8
 
 dev_dependencies:
   flutter_test:
