--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   timezone: ^0.10.1
   flutter_local_notifications_platform_interface: ^9.1.0
   file_picker: ^10.3.8
+  google_sign_in: ^6.2.2
+  googleapis: ^15.0.0
+  extension_google_sign_in_as_googleapis_auth: ^2.0.12
 
 dev_dependencies:
   flutter_test:
