--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   uuid: ^4.5.2
   supabase_flutter: ^2.12.0
   google_mlkit_text_recognition: ^0.14.0
+  mobile_ocr:
+    git:
+      url: https://github.com/ente-io/mobile_ocr
   image_picker: ^1.1.2
   sensors_plus: ^6.1.1
   shimmer: ^3.0.0
