--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   google_sign_in: ^6.2.2
   googleapis: ^15.0.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.12
+  flutter_secure_storage: ^9.2.2
+  connectivity_plus: ^6.1.2
 
 dev_dependencies:
   flutter_test:
