--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   google_sign_in: ^6.2.2
   googleapis: ^15.0.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.12
+  draggable_scrollbar: ^0.1.0
 
 dev_dependencies:
   flutter_test:
